# SAP

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_debug.sh
dotsandboxes/: CMakeLists.txt  SAP-GameAI-DotsAndBoxes-L3.md
dotsandboxes/src/: credits.c  credits.h  game_options.c  game_options.h  main.c  main.h  menu.c  menu.h  options.c  options.h
dotsandboxes/src/game/: board.c  game.c  game.h
nacbot_v2/: CMakeLists.txt  README.md
nacbot_v2/src/: credits.c  credits.h  game_options.c  game_options.h  main.c  main.h  menu.c  menu.h  options.c  options.h
nacbot_v2/src/game/: bot.c  bot.h  game.c  game.h
noughtsandcrosses/: CMakeLists.txt
noughtsandcrosses/src/: main.c  main.h
sap/: CMakeLists.txt  README.md
sap/src/: error_table.h  sap.c  sap.h  types.h
sap/src/events/: table.h
sap/src/font/: font.c  font.h
sap/src/fonts/: RussoOne_Regular.h  VT323_Regular.h
utils/: CMakeLists.txt  README.md
utils/src/: GameUI.h
